# ScaffoldGenerator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SCHEMA.md  TEST.scaff
include/generator/: BuildToolsGenerator.h  CallableGenerator.h  ClassGenerator.h  DirectoryNode.h  DirectoryTreeBuilder.h  DiskFileWriter.h  FileNodeGenerator.h  FileNodeGenerator.tpp  GeneratorUtilities.h  IFileWriter.h  MethodGenerator.h  NamespaceGenerator.h  ProjectMetadata.h  PropertiesGenerator.h  SpecialMemberGenerator.h  TraverseAndGenerate.h
include/model/: CallableModels.h  ClassModels.h  CodeGroupModels.h  PropertiesModels.h  ScaffoldModels.h  ScaffoldProperties.h
include/parser/: CallableParser.h  ClassParser.h  FolderParser.h  LibraryParser.h  MethodParser.h  NamespaceParser.h  ParserUtilities.h  ProjectParser.h  PropertiesParser.h  SpecialMemberFunctionParser.h
src/: main.cpp
src/generator/: BuildToolGenerator.cpp  CallableGenerator.cpp  ClassGenerator.cpp  DirectoryNode.cpp  DirectoryTreeBuilder.cpp  DiskFileWriter.cpp  FileNodeGenerator.cpp  GeneratorUtilities.cpp  MethodGenerator.cpp  NamespaceGenerator.cpp  PropertiesGenerator.cpp  SpecialMemberGenerator.cpp  TraverseAndGenerate.cpp
src/parser/: CallableParser.cpp  ClassParser.cpp  FolderParser.cpp  LibraryParser.cpp  MethodParser.cpp  NamespaceParser.cpp  ParserUtilities.cpp  ProjectParser.cpp  PropertiesParser.cpp  SpecialMemberFunctionParser.cpp
tests/: testUtility.h  test_generateClassAssignment.cpp  test_generateClassDefinition.cpp  test_generateDeclarationSpecifier.cpp  test_generateMethodDec.cpp  test_generateMethodDef.cpp  test_generateParams.cpp  test_parseConstructor.cpp  test_parseDataType.cpp  test_parseDeclarationSpecifier.cpp  test_parseMethod.cpp  test_parseParameters.cpp
tests/generator/: test_directoryTreeBuilderTests.cpp  test_fileNodeGenerator.cpp  test_generateCMake.cpp  test_generateClassAssignment.cpp  test_generateClassDeclaration.cpp  test_generateClassDefinition.cpp  test_generateConstructorDec.cpp  test_generateConstructorDef.cpp  test_generateDeclarationSpecifier.cpp  test_generateDestructor.cpp  test_generateFuncDeclartation.cpp  test_generateFuncDefinition.cpp  test_generateMethodDec.cpp  test_generateMethodDef.cpp  test_generateNamespace.cpp  test_generateParams.cpp  test_generateVscodeJsons.cpp  test_traverseAndGenerate.cpp
tests/parser/: test_folderParser.cpp  test_libraryParser.cpp  test_namespaceParser.cpp  test_parseClass.cpp  test_parseConstructor.cpp  test_parseDataType.cpp  test_parseDeclarationSpecifier.cpp  test_parseDestructor.cpp  test_parseFunc.cpp  test_parseMethod.cpp  test_parseParameters.cpp  test_projectParser.cpp
